--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.6",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
