--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "nanoid": "^5.0.7",
